<resources>
    <string name="app_name">Movie Review</string>
    <string name="PASSING_ERROR">PASSING_ERROR</string>
    <string name="PASSING_ERROR_CONTENT">No MovieID</string>
    <string name="default_textView">DF_TextView</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="genre">Genre</string>
    <string name="release">Release</string>
    <string name="plot">Plot</string>
    <string name="rate_movie">RATE MOVIE</string>
    <string name="rate_this_movie">RATE THIS MOVIE</string>
    <string name="accessToken">d872f391-16ed-4ddd-89ac-1cdd30e38133</string>
    <string name="base_URL">https://movies.bloder.xyz</string>
    <string name="API_call_fail">The call failed</string>
    <string name="API_CALL">API_CALL</string>
    <string name="added_review">Review was added</string>
    <string name="poster_description">Movie Poster</string>
    <string name="backdrop_description">Movie Backdrop</string>
</resources>
